typescript/checker/tests/conformance/expressions/functionCalls/functionCalls.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            460,
        ),
        hi: BytePos(
            467,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/functionCalls.ts:18:5
   |
18 | var subFunc: SubFunc;
   |     ^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            840,
        ),
        hi: BytePos(
            844,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/functionCalls.ts:32:5
   |
32 | var func: Function;
   |     ^^^^

